hphp/test/zend/bad/ext-spl/SplObjectStorage_removeAll_invalid_parameter.php
<?php

$data_provider = array(
	array(),
	true,
	"string",
	12345,
	1.2345,
	NULL
);

foreach($data_provider as $input) {

	$s = new SplObjectStorage();

	var_dump($s->removeAll($input));
}

?>